force-app/main/default/objects/Solicita_o_de_devolu_o__c/Solicita_o_de_devolu_o__c.object-meta.xml
<CustomObject>
    <label>Solicitação de devolução</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Nome de Solicitação de devolução</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações de devolução</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>