force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERRO DE SEPARAÇÃO/ENVIO</fullName>
            </value>
            <value>
                <fullName>DEFEITO DE PRODUTO/EQUIPAMENTO</fullName>
            </value>
            <value>
                <fullName>ERRO DE CÓDIGO DO PRODUTO ERRADO</fullName>
            </value>
            <value>
                <fullName>PRODUTO VENCIDO OU FORA DO PADRÃO</fullName>
            </value>
            <value>
                <fullName>PEDIDO DUPLICADO OU FATURADO INDEVIDAMENTE</fullName>
            </value>
            <value>
                <fullName>CANCELAMENTO PELO CLIENTE FINAL</fullName>
            </value>
            <value>
                <fullName>PROBLEMAS LOGÍSTICOS EXTERNOS</fullName>
            </value>
            <value>
                <fullName>PROBLEMAS DE PAGAMENTO DO CLIENTE</fullName>
            </value>
            <value>
                <fullName>INTERRUPÇÃO CONTRATUAL (HOSPCOM)</fullName>
            </value>
            <value>
                <fullName>FATORES DE FORÇA MAIOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>