force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/Erro_inserir_no_sap__c.field-meta.xml
<CustomField>
    <fullName>Erro_inserir_no_sap__c</fullName>
    <description>Mostrar o erro, caso aconteça erro ao tentar inserir a devolução no sap</description>
    <inlineHelpText>Mostrar o erro, caso aconteça erro ao tentar inserir a devolução no sap</inlineHelpText>
    <label>Erro inserir no sap</label>
    <type>TextArea</type>
</CustomField>