force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/Gestor__c.field-meta.xml
<CustomField>
    <fullName>Gestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gestor do vendedor do pedido de venda</description>
    <label>Gestor comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solicita_es_de_devolu_o</relationshipName>
    <type>Lookup</type>
</CustomField>