force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Solicitações de devolução</relationshipLabel>
    <relationshipName>Solicita_es_de_devolu_o</relationshipName>
    <type>Lookup</type>
</CustomField>