force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/PedidoGerado__c.field-meta.xml
<CustomField>
    <fullName>PedidoGerado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Após o pedido ser devolvido, vincular um novo pedido gerado a partir desta devolução.</inlineHelpText>
    <label>Novo pedido gerado</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Solicitações de devolução (Novo pedido gerado)</relationshipLabel>
    <relationshipName>Solicita_es_de_devolu_o1</relationshipName>
    <type>Lookup</type>
</CustomField>