force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/Quantidade_devolvida__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_devolvida__c</fullName>
    <inlineHelpText>Preencher com quantidade maior que 0 para devoluções parciais.</inlineHelpText>
    <label>Quantidade devolvida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>