force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Aprovação - Operações</fullName>
            </value>
            <value>
                <fullName>Aprovação -  Gestor</fullName>
            </value>
            <value>
                <fullName>Conferência Financeira</fullName>
            </value>
            <value>
                <fullName>Integrando ao SAP</fullName>
            </value>
            <value>
                <fullName>Aguardando Devolução</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Aguardando cancelamento do boleto</fullName>
                <isActive>false</isActive>
                <label>Aguardando cancelamento do boleto</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
                <isActive>false</isActive>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>Em andamento</fullName>
                <isActive>false</isActive>
                <label>Em andamento</label>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
                <isActive>false</isActive>
                <label>Em aprovação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>