force-app/main/default/objects/Solicita_o_de_devolu_o__c/fields/Valor_total_da_Solicita_o__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_da_Solicita_o__c</fullName>
    <description>Soma feita por um fluxo no n8n que percorre todos itens</description>
    <label>Valor total da Solicitação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>