force-app/main/default/objects/Solicita_o_de_devolu_o__c/validationRules/Bloqueia_alteracao_financeiro.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_alteracao_financeiro</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),

    OR(
        $Profile.Id = &quot;00e6e000002JQTIAA4&quot;,
        $Profile.Id = &quot;00e5A000001yRA5QAM&quot;
    ),

    ISCHANGED(Boleto_cancelado__c),

    OR(
        ISCHANGED(Categoria__c),
        ISCHANGED(CreatedById),
        ISCHANGED(Erro_inserir_no_sap__c),
        ISCHANGED(Faturamento__c),
        ISCHANGED(Gestor__c),
        ISCHANGED(LastModifiedById),
        ISCHANGED(CurrencyIsoCode),
        ISCHANGED(Name),
        ISCHANGED(PedidoGerado__c),
        ISCHANGED(Observacoes__c),
        ISCHANGED(Pedido__c),
        ISCHANGED(OwnerId),
        ISCHANGED(Quantidade_devolvida__c),
        ISCHANGED(Status__c),
        ISCHANGED(Tipo__c),
        ISCHANGED(Valor_total_da_Solicita_o__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Boleto_cancelado__c</errorDisplayField>
    <errorMessage>Apenas o campo &apos;Boleto cancelado&apos; é disponível ao financeiro.</errorMessage>
</ValidationRule>