force-app/main/default/objects/Solicita_o_de_devolu_o__c/validationRules/Bloquuei_integracao.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquuei_integracao</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Boleto_cancelado__c = false,
 TEXT(Status__c) = &apos;Integrando ao SAP&apos;
)</errorConditionFormula>
    <errorDisplayField>Boleto_cancelado__c</errorDisplayField>
    <errorMessage>Cancele o boleto no SAP e marque essa campo para prosseguir.</errorMessage>
</ValidationRule>