force-app/main/default/objects/Solicita_o_de_devolu_o__c/validationRules/Boleto_cancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>Boleto_cancelado</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    AND(
        ISNEW(),
        Boleto_cancelado__c = TRUE
    ),
 
    AND(
        NOT(ISNEW()),
        ISCHANGED(Boleto_cancelado__c),
        Boleto_cancelado__c = TRUE,
        TEXT(Status__c) &lt;&gt; &quot;Aguardando cancelamento do boleto&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>Boleto_cancelado__c</errorDisplayField>
    <errorMessage>Para cancelar um boleto, o status deve estar como &apos;Aguardando cancelamento do boleto&apos;.</errorMessage>
</ValidationRule>