force-app/main/default/objects/Solicita_o_de_devolu_o__c/validationRules/Boleto_cancelado_financeiro.validationRule-meta.xml
<ValidationRule>
    <fullName>Boleto_cancelado_financeiro</fullName>
    <active>true</active>
    <description>Gestor Financeiro = 00G6e000005qcQAEAY
Comunidade financeiro = 00e5A000001yRA5QAM</description>
    <errorConditionFormula>AND(
    ISCHANGED(Boleto_cancelado__c),
    NOT(
        $Profile.Id = &quot;00G6e000005qcQAEAY&quot; || 
        $Profile.Id = &quot;00e5A000001yRA5QAM&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>Boleto_cancelado__c</errorDisplayField>
    <errorMessage>Somente usuários do financeiro podem alterar este campo.</errorMessage>
</ValidationRule>