force-app/main/default/objects/Solicita_o_de_devolu_o__c/validationRules/Quantidade_devolvida_parcial.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantidade_devolvida_parcial</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Tipo__c, &quot;Parcial&quot;),
    OR(
        ISBLANK(Quantidade_devolvida__c),
        Quantidade_devolvida__c = 0
    )
)</errorConditionFormula>
    <errorMessage>O campo Quantidade devolvida deve ser preenchido para devoluções parcial. Preencher com um valor diferente de 0.</errorMessage>
</ValidationRule>