force-app/main/default/objects/Solicita_o_de_devolu_o__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pedido__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>